Added offset_bar plotting. Added region plotting. Both offset_bar and region plots are now demonstrated in the basics2.c example file. Added the new source code files to the gtk/Makefile.am Removed a redundant variable 'GdkPoint *xyc_graph;' from the gtkdatabox_xyc_graph. Added the function 'gtk_databox_graph_add_front' to plot ontop of everything else already plotted. Added the new gtkdatabox_xyyc_graph which allows plots with two y co-ordinates for each x ordinate.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 autom4te.cache
+Makefile.in
+*/Makefile.in
 Makefile
 */Makefile
 */*/Makefile
@@ -17,6 +19,12 @@ examples/lissajous
 examples/Makefile
 examples/markers
 examples/signals
+examples/basics
+examples/basics2
+examples/basics_libglade
+examples/colors
+examples/keycontrol
+examples/logarithmic
 .gitignore~
 config.*
 libtool
