--- a/gtk/Makefile.am
+++ b/gtk/Makefile.am
@@ -7,12 +7,15 @@ libgtkdatabox_la_SOURCES= \
 			gtkdatabox_scale.c\
 			gtkdatabox_graph.c\
 			gtkdatabox_xyc_graph.c\
+			gtkdatabox_xyyc_graph.c\
  			gtkdatabox_points.c\
-                        gtkdatabox_lines.c\
-                        gtkdatabox_bars.c\
+            gtkdatabox_lines.c\
+            gtkdatabox_bars.c\
+            gtkdatabox_offset_bars.c\
+            gtkdatabox_regions.c\
 			gtkdatabox_markers.c\
-                        gtkdatabox_cross_simple.c\
-                        gtkdatabox_grid.c\
+            gtkdatabox_cross_simple.c\
+            gtkdatabox_grid.c\
 			gtkdatabox_ruler.c
 
 libgtkdatabox_la_LDFLAGS= \
@@ -28,12 +31,15 @@ include_HEADERS		= \
 			gtkdatabox_scale.h\
 			gtkdatabox_graph.h\
 			gtkdatabox_xyc_graph.h\
+			gtkdatabox_xyyc_graph.h\
  			gtkdatabox_points.h\
-                        gtkdatabox_lines.h\
-                        gtkdatabox_bars.h\
+            gtkdatabox_lines.h\
+            gtkdatabox_bars.h\
+            gtkdatabox_offset_bars.h\
+            gtkdatabox_regions.h\
 			gtkdatabox_markers.h\
-                        gtkdatabox_cross_simple.h\
-                        gtkdatabox_grid.h\
+            gtkdatabox_cross_simple.h\
+            gtkdatabox_grid.h\
 			gtkdatabox_ruler.h
 
 EXTRA_DIST = gtkdatabox_marshal.list
