Added new features to rulers. Rulers can now be displayed without subtick marks. Y rulers can now be displayed with horizontal text.

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,8 @@ examples/basics_libglade
 examples/colors
 examples/keycontrol
 examples/logarithmic
+examples/rulers
 .gitignore~
 config.*
 libtool
-
+gtkdatabox/*
