Added changes to get the system compiling to a static library in VC++

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ examples/rulers
 config.*
 libtool
 gtkdatabox/*
+gtkdataboxvc++/ipch
+gtkdataboxvc++/gtkdataboxvc++.opensdf
+gtkdataboxvc++/Release
+gtkdataboxvc++/Debug
+
+
