Altered te gitignore file and removed various autogenerated files - as requested by lars-peter Clausen

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ autom4te.cache
 Makefile.in
 */Makefile.in
 */*/Makefile.in
+*/*/*/Makefile.in
 Makefile
 */Makefile
 */*/Makefile
@@ -37,5 +38,4 @@ gtkdataboxvc++/ipch
 gtkdataboxvc++/gtkdataboxvc++.opensdf
 gtkdataboxvc++/Release
 gtkdataboxvc++/Debug
-
-
+ltmain.sh
