--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,6 @@ pkgconfig_DATA = gtkdatabox.pc
 
 SUBDIRS = gtk glade examples 
 
-EXTRA_DIST = m4 depcomp scripts gtkdatabox.pc.in gtkdatabox.spec.in glade/gtkdatabox.xml
+EXTRA_DIST = m4 depcomp scripts gtkdatabox.pc.in gtkdatabox.spec.in glade/gtkdatabox.xml api
 
 DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc
