Fixed most of the examples to compile under gtk3.  The Makefile needs work, and colors doesn't work (need to update the use of GtkColorSelectionDialog).  Didn't try to fix the C++ example.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -78,3 +78,36 @@ basics : basics.o
 
 basics2 : basics2.o
 	gcc -o basics2 basics2.o ../gtk/.libs/libgtkdatabox.a `pkg-config --libs gtk+-3.0` -lm
+
+addremove : addremove.o
+	gcc -o addremove addremove.o ../gtk/.libs/libgtkdatabox.a `pkg-config --libs gtk+-3.0` -lm
+
+colors : colors.o
+	gcc -o colors colors.o ../gtk/.libs/libgtkdatabox.a `pkg-config --libs gtk+-3.0` -lm
+
+enable_disable : enable_disable.o
+	gcc -o enable_disable enable_disable.o ../gtk/.libs/libgtkdatabox.a `pkg-config --libs gtk+-3.0` -lm
+
+grid : grid.o
+	gcc -o grid grid.o ../gtk/.libs/libgtkdatabox.a `pkg-config --libs gtk+-3.0` -lm
+
+grid_array : grid_array.o
+	gcc -o grid_array grid_array.o ../gtk/.libs/libgtkdatabox.a `pkg-config --libs gtk+-3.0` -lm
+
+keycontrol : keycontrol.o
+	gcc -o keycontrol keycontrol.o ../gtk/.libs/libgtkdatabox.a `pkg-config --libs gtk+-3.0` -lm
+
+lissajous : lissajous.o
+	gcc -o lissajous lissajous.o ../gtk/.libs/libgtkdatabox.a `pkg-config --libs gtk+-3.0` -lm
+
+logarithmic : logarithmic.o
+	gcc -o logarithmic logarithmic.o ../gtk/.libs/libgtkdatabox.a `pkg-config --libs gtk+-3.0` -lm
+
+markers : markers.o
+	gcc -o markers markers.o ../gtk/.libs/libgtkdatabox.a `pkg-config --libs gtk+-3.0` -lm
+
+rulers : rulers.o
+	gcc -o rulers rulers.o ../gtk/.libs/libgtkdatabox.a `pkg-config --libs gtk+-3.0` -lm
+
+signals : signals.o
+	gcc -o signals signals.o ../gtk/.libs/libgtkdatabox.a `pkg-config --libs gtk+-3.0` -lm
