Major (but backwards compatible) change to data handling. New API functions to create graph objects (*_new_full instead of *_new) give options to handle non-float arrays, and more control over the data formats supported.  I.e. can support ring buffers, and columns or partial columns out of 2d matrix data.
Along way, I think I fixed a memory leak in the complete() functions.  I haven't fixed markers.c, which still has the leak (g_new0() without freeing original data), triggered if notify:length is handled.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -3,6 +3,7 @@
 noinst_PROGRAMS         = \
                           basics\
                           basics2\
+                          full\
                           logarithmic\
                           rulers\
                           keycontrol\
@@ -20,6 +21,8 @@ noinst_PROGRAMS         = \
 basics_SOURCES          = basics.c
 
 basics2_SOURCES         = basics2.c
+
+full_SOURCES         	= full.c
 
 logarithmic_SOURCES     = logarithmic.c
 
