Make gtkdatabox compile with GSEAL_ENABLED and GTK_DISABLE_SINGLE_INCLUDES
Backport changes from the cairo-alpha branch to make the gtk2 version of
gtkdatabox compile with GSEAL_ENABLED and GTK_DISABLE_SINGLE_INCLUDES.

Signed-off-by: Lars-Peter Clausen <lars@metafoo.de>

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -56,6 +56,8 @@ AM_CFLAGS			=\
 			-DGDK_DISABLE_DEPRECATED\
 			-DGDK_PIXBUF_DISABLE_DEPRECATED\
 			-DGTK_DISABLE_DEPRECATED\
+			-DGSEAL_ENABLED\
+			-DGTK_DISABLE_SINGLE_INCLUDES\
 			@LIBGLADE_CFLAGS@ \
 			`pkg-config gtk+-2.0 --cflags`
 
