--- a/gtk/Makefile.am
+++ b/gtk/Makefile.am
@@ -63,4 +63,6 @@ AM_CFLAGS			=\
 			-DGDK_PIXBUF_DISABLE_DEPRECATED\
 			-DGTK_DISABLE_DEPRECATED\
 			-DGTK_MULTIHEAD_SAFE=1\
+			-DGSEAL_ENABLE\
+			-DGTK_DISABLE_SINGLE_INCLUDES\
 			`pkg-config gtk+-2.0 --cflags`
