Updated autoconf/automake files to support cross-compiling. It also generates a shared library by default, including a DLL when compiling for Windows. I should not have been calling `pkg-config` in the Makefile.am files to get the GTK3 cflags. Building gtkdatabox now works with mingw32 and mingw64 on fedora linux. Adding -no-undefined and AC_LIBTOOL_WIN32_DLL enables DLL building (but haven't tested if DLL is usable). Note: autoconf now defaults to building the noinstall example programs dynamically linked, with script files in examples, actual binaries in examples/.libs.  Can call configure --disable-shared to avoid this and go back to original behavior (this is an autoconf thing, but need to know this in order to use gdb on the example programs)

--- a/configure.ac
+++ b/configure.ac
@@ -34,9 +34,10 @@ AC_SUBST(DATABOX_VERSION, [databox_version])
 
 AM_INIT_AUTOMAKE(gtkdatabox, databox_version)
 
+AC_LIBTOOL_WIN32_DLL
 AM_PROG_LIBTOOL
 
-AC_PROG_CC
+AC_PROG_CC_C99
 AC_PROG_CPP
 AC_PROG_INSTALL
 
@@ -45,7 +46,8 @@ m4_define([pango_required_version], [1.16.0])
 m4_define([cairo_required_version], [1.4.0])
 
 AM_PATH_GTK_3_0([gtk_required_version])
-PKG_CHECK_MODULES(GTK, [gdk-3.0 >= [gtk_required_version] gtk+-3.0 >= [gtk_required_version]])
+PKG_CHECK_MODULES(GTK, [gtk+-3.0 >= [gtk_required_version]])
+PKG_CHECK_MODULES(GTK, [gdk-3.0 >= [gtk_required_version]])
 PKG_CHECK_MODULES(PANGO, pango >= [pango_required_version])
 PKG_CHECK_MODULES(CAIRO, cairo >= [cairo_required_version]) 
 AC_SUBST(GTK_REQUIRED, [gtk_required_version])
