Examples were complaining about not linking against the -lm library. Now fixed in the examples/Makefile.am Markers are now drawn using cairo. Compared against examples/markers.c and they both match. Added a codeBlocks ide project file which only allows source code browsing and editing ... nothing fancy.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -63,7 +63,8 @@ AM_CFLAGS			=\
 
 
 LDADD 			= $(top_builddir)/gtk/libgtkdatabox.la\
-		 	@GTK_LIBS@
+		 	@GTK_LIBS@ \
+			-lm
 
 
 if BUILD_LIBGLADE
