--- a/codeBlocks/GtkDatabox.cbp
+++ b/codeBlocks/GtkDatabox.cbp
@@ -31,6 +31,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="../configure.ac" />
 		<Unit filename="../examples/Makefile.am" />
 		<Unit filename="../examples/addremove.c">
 			<Option compilerVar="CC" />
