Integrated most of Johannes Deutsch's patch to switch from GdkColor to GdkRGBA and from GtkTable to GtkGrid.
Also began addressing the switch from xthickness and ythickness to GTK3 padding.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ examples/Makefile
 examples/markers
 examples/signals
 examples/basics
+examples/full
 examples/basics2
 examples/basics_libglade
 examples/colors
