--- a/gtk/Makefile.am
+++ b/gtk/Makefile.am
@@ -53,7 +53,7 @@ $(srcdir)/gtkdatabox_marshal.c: $(srcdir)/gtkdatabox_marshal.list
 $(srcdir)/gtkdatabox_marshal.h: $(srcdir)/gtkdatabox_marshal.list
 	glib-genmarshal --header --prefix=gtk_databox_marshal --internal $< > $@
 
-INCLUDES		= \
+AM_CPPFLAGS		= \
 			-I$(top_srcdir)
 
 AM_CFLAGS			=\
